--- a/src/FlexTemplate/Views/Home/Components/ThisPlacePhoto/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacePhoto/Default.cshtml
@@ -10,7 +10,7 @@
     
 </div>
 
-<form method="post" asp-action="Upload" asp-controller="Home" enctype="multipart/form-data">
+<form method="post" asp-action="Upload" asp-controller="Upload" enctype="multipart/form-data">
     <div id="file-submit" class="dropzone">
         <input type="file">
         <div class="dz-default dz-message"><span>Завантажити ще..</span></div>
