--- a/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
@@ -16,8 +16,8 @@
                         <li>
                             <a>Увійти(Тест)</a>
                             <ul style="display: none">
-                                <li><a href="@Url.Action("LoginAsAdmin", "Home")">Як адміністратор</a></li>
-                                <li><a href="@Url.Action("LoginAsGuest", "Home")">Як користувач</a></li>
+                                <li><a href="@Url.Action("LoginAsAdmin", "Login")">Як адміністратор</a></li>
+                                <li><a href="@Url.Action("LoginAsGuest", "Login")">Як користувач</a></li>
                             </ul>
                         </li>
                     </ul>
