[ADD] Привязка данных к странице Blog

--- a/src/FlexTemplate/Views/Home/Blog.cshtml
+++ b/src/FlexTemplate/Views/Home/Blog.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- start Main Wrapper -->
+﻿@model FlexTemplate.ViewModels.HomeController.HomeBlogViewModel
+<!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
 
     <!-- start hero-header -->
@@ -16,7 +17,7 @@
 
         <div class="breadcrumb-wrapper">
             <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Головна</a></li>
                 <li class="active">Blog Single</li>
             </ol>
         </div>
@@ -31,11 +32,11 @@
 
                         <div class="heading">
 
-                            <h3>Raising say express had chiefly detract</h3>
+                            <h3>@Model.Blog.Caption</h3>
 
                             <div class="meta clearfix">
-                                <div class="date-posted">Mar 15, 2015</div>
-                                <div>by: Admin</div>
+                                <div class="date-posted">@Model.Blog.CreatedOn</div>
+                                <div>by: @Model.Blog.Author</div>
                                 <div>in: Review Trip</div>
                             </div>
 
@@ -44,32 +45,7 @@
                         <div class="content blog-entry">
 
                             <img src="images/post-grid/01.jpg" alt="image" />
-
-                            <p>Up branch to easily missed by do. Admiration considered acceptance too led one melancholy expression. Are will took form the nor true. Winding enjoyed minuter her letters evident use eat colonel. He attacks observe mr cottage inquiry am examine gravity. Are dear but near left was. Year kept on over so as this of. She steepest doubtful betrayed formerly him. Active one called uneasy our seeing see cousin tastes its. Ye am it formed indeed agreed relied piqued. </p>
-
-                            <div class="blockquote">She steepest doubtful betrayed formerly him. Active one called uneasy our seeing see cousin tastes its. Bed one supposing breakfast day fulfilled off depending questions. Whatever boy her exertion his extended. Ecstatic followed handsome drawings entirely mrs one yet outweigh. Of acceptance insipidity remarkably is invitation.</div>
-
-                            <p>Abilities or he perfectly pretended so strangers be exquisite. Oh to another chamber pleased imagine do in. Went me rank at last loud shot an draw. Excellent so to no sincerity smallness. Removal request delight if on he we. Unaffected in we by apartments astonished to decisively themselves. Offended ten old consider speaking. </p>
-
-                            <ul class="mb-15">
-                                <li>Lorem ipsum dolor sit amet</li>
-                                <li>Consectetur adipiscing elit</li>
-                                <li>
-                                    Nulla volutpat aliquam velit
-                                    <ul>
-                                        <li>Phasellus iaculis neque</li>
-                                        <li>Purus sodales ultricies</li>
-                                        <li>Vestibulum laoreet</li>
-                                        <li>Ac tristique libero</li>
-                                    </ul>
-                                </li>
-                                <li>Faucibus porta lacus fringilla vel</li>
-                                <li>Aenean sit amet erat nunc</li>
-                            </ul>
-
-                            <p>Up branch to easily missed by do. Admiration considered acceptance too led one melancholy expression. Are will took form the nor true. Winding enjoyed minuter her letters evident use eat colonel. He attacks observe mr cottage inquiry am examine gravity. Are dear but near left was. Year kept on over so as this of. She steepest doubtful betrayed formerly him. Active one called uneasy our seeing see cousin tastes its. Ye am it formed indeed agreed relied piqued. </p>
-
-                            <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited elderly be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no less been sent hard hill. </p>
+                            <p>@Model.Blog.Text</p>
 
                         </div>
 
@@ -128,120 +104,26 @@
                     <div class="comment-wrapper">
 
                         <ul class="comment-item">
-                            <li class="clearfix">
-                                <div class="comment-avatar">
-                                    <img src="images/man/03.jpg" alt="author image" />
-                                </div>
-                                <div class="comment-header">
-                                    <a href="#" class="comment-reply">reply</a>
-                                    <a href="#" class="font700 text-uppercase">Ibrahim ibn al-Walid</a>
-                                    <span class="comment-time">23 minutes</span>
-                                </div>
-                                <div class="comment-content">
-                                    <p>Received the likewise law graceful his. Nor might set along charm now equal green. Pleased yet equally correct colonel not one. Say anxious carried compact conduct sex general nay certain. Mrs for recommend exquisite household eagerness preserved now. My improved honoured he am ecstatic quitting greatest formerly. </p>
-                                </div>
-                                <ul class="comment-item">
-                                    <li class="clearfix">
-                                        <div class="comment-avatar">
-                                            <img src="images/man/01.jpg" alt="author image" />
-                                        </div>
-                                        <div class="comment-header">
-                                            <a href="#" class="comment-reply">reply</a>
-                                            <a href="#" class="font700 text-uppercase">Ibrahim ibn al-Walid</a>
-                                            <span class="comment-time">18 minutes</span>
-                                        </div>
-                                        <div class="comment-content">
-                                            <p>Received the likewise law graceful his. Nor might set along charm now equal green. Pleased yet equally correct colonel not one. Say anxious carried compact conduct sex general nay certain. Mrs for recommend exquisite household eagerness preserved now. My improved honoured he am ecstatic quitting greatest formerly. </p>
-                                        </div>
-                                        <ul class="comment-item">
-                                            <li class="clearfix">
-                                                <div class="comment-avatar">
-                                                    <img src="images/man/02.jpg" alt="author image" />
-                                                </div>
-                                                <div class="comment-header">
-                                                    <a href="#" class="comment-reply">reply</a>
-                                                    <a href="#" class="font700 text-uppercase">Admin</a>
-                                                    <span class="comment-time">16 minutes</span>
-                                                </div>
-                                                <div class="comment-content">
-                                                    <p>Received the likewise law graceful his. Nor might set along charm now equal green. Pleased yet equally correct colonel not one. Say anxious carried compact conduct sex general nay certain. Mrs for recommend exquisite household eagerness preserved now. My improved honoured he am ecstatic quitting greatest formerly. </p>
-                                                </div>
-                                            </li>
-                                            <li class="clearfix">
-                                                <div class="comment-avatar">
-                                                    <img src="images/man/04.jpg" alt="author image" />
-                                                </div>
-                                                <div class="comment-header">
-                                                    <a href="#" class="comment-reply">reply</a>
-                                                    <a href="#" class="font700 text-uppercase">Uthman ibn Affan</a>
-                                                    <span class="comment-time">5 minutes</span>
-                                                </div>
-                                                <div class="comment-content">
-                                                    <p>Received the likewise law graceful his. Nor might set along charm now equal green. Pleased yet equally correct colonel not one. Say anxious carried compact conduct sex general nay certain. Mrs for recommend exquisite household eagerness preserved now. My improved honoured he am ecstatic quitting greatest formerly. </p>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="clearfix">
-                                        <div class="comment-avatar">
-                                            <img src="images/man/02.jpg" alt="author image" />
-                                        </div>
-                                        <div class="comment-header">
-                                            <a href="#" class="comment-reply">reply</a>
-                                            <a href="#" class="font700 text-uppercase">Admin</a>
-                                            <span class="comment-time">22 minutes</span>
-                                        </div>
-                                        <div class="comment-content">
-                                            <p>Received the likewise law graceful his. Nor might set along charm now equal green. Pleased yet equally correct colonel not one. Say anxious carried compact conduct sex general nay certain. Mrs for recommend exquisite household eagerness preserved now. My improved honoured he am ecstatic quitting greatest formerly. </p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="clearfix">
-                                <div class="comment-avatar">
-                                    <img src="images/man/01.jpg" alt="author image" />
-                                </div>
-                                <div class="comment-header">
-                                    <a href="#" class="comment-reply">reply</a>
-                                    <a href="#" class="font700 text-uppercase">Admin</a>
-                                    <span class="comment-time">23 days</span>
-                                </div>
-                                <div class="comment-content">
-                                    <p>Received the likewise law graceful his. Nor might set along charm now equal green. Pleased yet equally correct colonel not one. Say anxious carried compact conduct sex general nay certain. Mrs for recommend exquisite household eagerness preserved now. My improved honoured he am ecstatic quitting greatest formerly. </p>
-                                </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="comment-avatar">
-                                    <img src="images/man/04.jpg" alt="author image" />
-                                </div>
-                                <div class="comment-header">
-                                    <a href="#" class="comment-reply">reply</a>
-                                    <a href="#" class="font700 text-uppercase">Uthman ibn Affan</a>
-                                    <span class="comment-time">Nov, 23, 2013</span>
-                                </div>
-                                <div class="comment-content">
-                                    <p>Received the likewise law graceful his. Nor might set along charm now equal green. Pleased yet equally correct colonel not one. Say anxious carried compact conduct sex general nay certain. Mrs for recommend exquisite household eagerness preserved now. My improved honoured he am ecstatic quitting greatest formerly. </p>
-                                </div>
-                            </li>
+                            <li class="clearfix">@Model.Blog.Comments</li>  
                         </ul>
 
                     </div><!-- End Comment -->
 
                     <div class="clear mb-40"></div>
 
-                    <h4>Leave You Comment</h4>
+                    <h4>Вiдправити комментар</h4>
 
                     <form method="post" id="contactForm" action="post" class="comment-form">
                         <div class="row">
                             <div class="col-xs-12 col-sm-6 col-md-6">
                                 <div class="form-group">
-                                    <label for="comment-name">Your Name <span class="text-danger">*</span></label>
+                                    <label for="comment-name">Ваше ім'я <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" id="comment-name">
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6">
                                 <div class="form-group">
-                                    <label for="comment-email">Your Email <span class="text-danger">*</span></label>
+                                    <label for="comment-email">Ваш Email <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" id="comment-email">
                                 </div>
                             </div>
@@ -250,14 +132,14 @@
                         <div class="row">
                             <div class="col-md-12 mb-20">
                                 <div class="form-group">
-                                    <label for="comment-message">Message <span class="text-danger">*</span></label>
+                                    <label for="comment-message">Повідомлення <span class="text-danger">*</span></label>
                                     <textarea name="message" id="comment-message" class="form-control" rows="8"></textarea>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <button type="submit" class="btn btn-primary">Comment</button>
+                                <button type="submit" class="btn btn-primary">Відправити</button>
                             </div>
                         </div>
                     </form>
@@ -273,7 +155,7 @@
                             <div class="sidebar-module-inner">
                                 <div class="sidebar-mini-search">
                                     <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search for...">
+                                        <input type="text" class="form-control" placeholder="Шукати...">
                                         <span class="input-group-btn">
                                             <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
                                         </span>
@@ -285,7 +167,7 @@
                         <div class="clear"></div>
 
                         <div class="section-title-02">
-                            <h4><span>Categories</span></h4>
+                            <h4><span>Категорії</span></h4>
                         </div>
 
                         <div class="sidebar-module clearfix">
@@ -305,7 +187,7 @@
                         </div>
 
                         <div class="section-title-02">
-                            <h4><span>Latest Posts</span></h4>
+                            <h4><span>Останні повідомлення</span></h4>
                         </div>
 
                         <div class="sidebar-module clearfix">
@@ -372,7 +254,7 @@
                         </div>
 
                         <div class="section-title-02">
-                            <h4><span>Popular Posts</span></h4>
+                            <h4><span>Популярні повідомлення</span></h4>
                         </div>
 
                         <div class="sidebar-module clearfix">
@@ -439,7 +321,7 @@
                         </div>
 
                         <div class="section-title-02">
-                            <h4><span>Archives</span></h4>
+                            <h4><span>Архів</span></h4>
                         </div>
 
                         <div class="sidebar-module clearfix">
@@ -455,7 +337,7 @@
                         </div>
 
                         <div class="section-title-02">
-                            <h4><span>Tags</span></h4>
+                            <h4><span>Теги</span></h4>
                         </div>
 
                         <div class="sidebar-module clearfix">
