[ADD] Добавление меню и продуктов

--- a/src/FlexTemplate/Views/Components/Components/NewPlaceMenu/Default.cshtml
+++ b/src/FlexTemplate/Views/Components/Components/NewPlaceMenu/Default.cshtml
@@ -66,8 +66,8 @@
         </div>
 
         <div class="clearfix mt-15">
-            <a menu-position="@Model.Position"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
-            <a menu-position="@Model.Position"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
+            <a id="add-product" menu-position="@Model.Position"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+            <a id="remove-product" menu-position="@Model.Position"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
             <span class="ml-5 font13 line-12 text-muted font-italic">You can add upto 10 menus</span>
         </div>
 
